[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/characters/enemies/Enemy.gd" type="Script" id=1]
[ext_resource path="res://src/characters/overlaps/Hurtbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/characters/overlaps/PlayerDetectionZone.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/characters/agents/WanderController.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/characters/overlaps/Hitbox.tscn" type="PackedScene" id=6]

[node name="Enemy" type="KinematicBody2D"]
collision_layer = 16
collision_mask = 17
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 3 )]

[node name="WanderController" parent="." instance=ExtResource( 4 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="Hurtbox" parent="." instance=ExtResource( 2 )]

[node name="HitboxPivot" type="Position2D" parent="."]

[node name="Hitbox" parent="HitboxPivot" instance=ExtResource( 6 )]
collision_mask = 2

[connection signal="hurt" from="." to="." method="_on_Enemy_hurt"]
[connection signal="no_hp" from="." to="." method="_on_Enemy_no_hp"]

[editable path="PlayerDetectionZone"]
[editable path="Hurtbox"]
[editable path="HitboxPivot/Hitbox"]
